fix dropdown display on small screen sizes

--- a/css/styles.css
+++ b/css/styles.css
@@ -53,6 +53,13 @@ padding-bottom: 20px;
   margin: 25px;
 }
 
+.dropdown-menu {
+  left: 50%;
+  right:auto;
+  text-align: center;
+  transform: translate(-50%, 0);
+}
+
 .center {
   text-align: center;
 }
@@ -85,10 +92,6 @@ padding-bottom: 20px;
 
 .recipe-display, .select-reminder {
   display: none;
-}
-
-@media only screen and (max-width: 768px) {
-
 }
 
 @media only screen and (max-width: 480px) {
